--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "led_strip_main.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(SRCS "gattc_demo.c"
+                    INCLUDE_DIRS ".")
