--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/cmake-kits.json
 *.code-workspace
 
 # Local History for Visual Studio Code
