--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,25 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Starten",
+            "name": "ESP32 Flash Debug OpenOCD",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/startup_time.elf",
-            "args": [],
+            "program": "${command:cmake.buildDirectory}/gatt_server_demos.elf",
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "${env:HomePath}\\.espressif\\tools\\xtensa-esp32-elf\\esp-2020r3-8.4.0\\xtensa-esp32-elf\\bin\\xtensa-esp32-elf-gdb.exe",
+            "cwd": "${command:cmake.buildDirectory}",
+            "miDebuggerPath": "${env:HomePath}/.espressif/tools/xtensa-esp32-elf/esp-2020r3-8.4.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gdb.exe",
             "setupCommands": [
-                {
-                    "description": "Automatische Strukturierung und Einrückung für \"gdb\" aktivieren",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-            ]
+                {"text": "target remote localhost:3333"},
+                {"text": "set remote hardware-watchpoint-limit 2"},
+                {"text": "monitor reset halt"},
+                {"text": "flushregs"},
+            ],
         }
-
     ]
 }
