--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,67 @@
 {
-    // Verwendet IntelliSense zum Ermitteln möglicher Attribute.
-    // Zeigen Sie auf vorhandene Attribute, um die zugehörigen Beschreibungen anzuzeigen.
-    // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "ESP32 Flash Debug OpenOCD",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${command:cmake.buildDirectory}/gatt_server_demos.elf",
-            "stopAtEntry": false,
-            "cwd": "${command:cmake.buildDirectory}",
-            "miDebuggerPath": "${env:HomePath}/.espressif/tools/xtensa-esp32-elf/esp-2020r3-8.4.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gdb.exe",
-            "setupCommands": [
-                {"text": "target remote localhost:3333"},
-                {"text": "set remote hardware-watchpoint-limit 2"},
-                {"text": "monitor reset halt"},
-                {"text": "flushregs"},
-            ],
-        }
-    ]
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "ESP-Prog Debug",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/build/${config:esp_build_target_name}.elf",
+			"args": [],
+			"cwd": "${workspaceRoot}",
+			"environment": [
+				{
+					"name": "PATH",
+					"value": "${config:esp_dev_env_path}:${env:PATH}"
+				}
+			],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"miDebuggerPath": "${config:esp_toolchain_path}/xtensa-esp32-elf-gdb.exe",
+			"debugServerPath": "${config:esp_openocd_path}/openocd",
+			"debugServerArgs": "-f interface/ftdi/esp32_devkitj_v1.cfg -f target/esp32.cfg -c \"esp32.cpu1 configure -rtos FreeRTOS\"",
+			"serverStarted": "Open On-Chip Debugger.*",
+			"filterStderr": true,
+			"filterStdout": false,
+			"launchCompleteCommand": "None",
+			"setupCommands": [
+				{
+					"description": "Target Remote Device on Port 3333",
+					"text": "target extended-remote :3333",
+					"ignoreFailures": false
+				},
+				{
+					"description": "Hard Reset and Immediately Halt",
+					"text": "monitor reset halt",
+					"ignoreFailures": false
+				},
+				{
+					"description": "Flush Internal Register Cache",
+					"text": "flushregs",
+					"ignoreFailures": false
+				},
+				{
+					"description": "Set Temporary Hardware Assisted Breakpoint at `app_main`",
+					"text": "thbreak app_main",
+					"ignoreFailures": false
+				},
+				{
+					"description": "Shutdown GDB Server on GDB Detach",
+					"text": "monitor [target current] configure -event gdb-detach { shutdown }",
+					"ignoreFailures": false
+				},
+			],
+			"stopAtConnect": false,
+			"logging": {
+				"exceptions": true,
+				"engineLogging": false,
+				"moduleLoad": true,
+				"programOutput": true,
+				"trace": true,
+				"traceResponse": false
+			},
+		},
+	]
 }
