--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-    "cmake.buildDirectory": "${workspaceFolder}/cmake-build-debug"
+    // Update the following to match your target
+    "esp_openocd_config_file": "${workspaceRoot}/openocd/board_ft232h_esp32.cfg",
+    "esp_build_target_name": "gatt_server_demos",
+
+    // Update the following variables with paths that match your environment.
+    "esp_device_port": "COM19",
+    "esp_device_baud": 115200,
+
+    // Update the following to match your paths
+    "esp_idf_path":"C:/Users/ckrenslehner/Documents/CK/Projects/ESP/esp-idf",
+
+    "esp_openocd_path": "${env:HomePath}/.espressif/tools/openocd-esp32/v0.11.0-esp32-20211220/openocd-esp32/bin",
+    "esp_toolchain_path": "${env:HomePath}/.espressif/tools/xtensa-esp32-elf/esp-2021r2-patch3-8.4.0/xtensa-esp32-elf/bin",
+    "esp_dev_env_path": "${env:HomePath}\\.espressif\\tools\\xtensa-esp32-elf\\esp-2021r2-patch3-8.4.0\\xtensa-esp32-elf\\bin;${env:HomePath}\\.espressif\\tools\\xtensa-esp32s2-elf\\esp-2021r2-patch3-8.4.0\\xtensa-esp32s2-elf\\bin;${env:HomePath}\\.espressif\\tools\\xtensa-esp32s3-elf\\esp-2021r2-patch3-8.4.0\\xtensa-esp32s3-elf\\bin;${env:HomePath}\\.espressif\\tools\\riscv32-esp-elf\\esp-2021r2-patch3-8.4.0\\riscv32-esp-elf\\bin;${env:HomePath}\\.espressif\\tools\\esp32ulp-elf\\2.28.51-esp-20191205\\esp32ulp-elf-binutils\\bin;${env:HomePath}\\.espressif\\tools\\esp32s2ulp-elf\\2.28.51-esp-20191205\\esp32s2ulp-elf-binutils\\bin;${env:HomePath}\\.espressif\\tools\\cmake\\3.20.3\\bin;${env:HomePath}\\.espressif\\tools\\openocd-esp32\\v0.11.0-esp32-20211220\\openocd-esp32\\bin;${env:HomePath}\\.espressif\\tools\\ninja\\1.10.2\\;${env:HomePath}\\.espressif\\tools\\idf-exe\\1.0.3\\;${env:HomePath}\\.espressif\\tools\\ccache\\4.3\\ccache-4.3-windows-64;${env:HomePath}\\.espressif\\tools\\dfu-util\\0.9\\dfu-util-0.9-win64;${env:HomePath}\\.espressif\\python_env\\idf5.0_py3.9_env\\Scripts;${env:HomePath}\\Documents\\CK\\Projects\\ESP\\esp-idf\\tools",
 }
